# challenge-dev-prod

./: README.md  docker-compose.yml
stream-source/: Cargo.toml  Dockerfile  README.md
stream-source/src/: cache.rs  generator.rs  main.rs
